testData/annotators/functions/InvalidArgumentIntButExpectedClass_expected.Camel
${headerAs('valid', <error descr="Expected type: Class">10</error>)} == 'string'